# claude-langfuse-plugin

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: langfuse-doctor.md  setup.md
hooks/: hooks.json
tests/: test_plugin_tracing.py
