# Informational only — documents the plugin's runtime dependency pin.
#
# The hook does NOT use this file at runtime. hooks/hooks.json runs the tracer
# via `uv run --no-project --with "langfuse>=3.0,<4.0" bin/run_hook.py`, which
# resolves the dependency below from uv's cache (no project venv is created).
# The vendored package under vendor/ is added to sys.path by run_hook.py.
#
# Pin rationale: the vendored claude_code_langfuse_hook is verified against
# Langfuse v3. The backdated-timestamp feature probes for the SDK's OTel
# internals at runtime and falls back gracefully if absent, so it works on
# whatever 3.x release uv resolves.
[project]
name = "claude-langfuse-plugin-runtime"
version = "0.1.0"
description = "Isolated runtime dependencies for the claude-langfuse Claude Code plugin."
requires-python = ">=3.10"
dependencies = [
  "langfuse>=4.0,<5.0",
]

[tool.uv]
package = false
